--------------------------------------------------------------------------------
drkns 10.07.2021 15:55:20 +0100 - build 5845

1. Correctly show delete indicator if the directory scan before it was cancelled.

2. A few more fullwidth-related improvements.

3. Workaround for a conhost bug in DirectX mode.

4. Properly update Find File status bar.

5. Properly discard previous Find File results in all cases.

6. Speed up Find File by removing a few quadratic algorithms from the listbox / menu implementation.

--------------------------------------------------------------------------------
drkns 06.07.2021 17:17:17 +0100 - build 5844

1. #0003877: Exit to archive root via cd \ breaks the panel title.

2. #0003878: Incorrect selection when the block is beyond the screen border.

3. Several fixes in 1.x plugin wrapper related to colors processing.

4. Throttle down file panel updates on FS changes to one per second at most.

--------------------------------------------------------------------------------
drkns 01.07.2021 03:01:55 +0100 - build 5843

1. Autocomplete-related fixes.

--------------------------------------------------------------------------------
drkns 30.06.2021 01:41:10 +0100 - build 5842

1. Panels autoupdate again.

--------------------------------------------------------------------------------
drkns 29.06.2021 23:22:07 +0100 - build 5841

1. And more.

--------------------------------------------------------------------------------
drkns 29.06.2021 17:58:00 +0100 - build 5840

1. A few more fixes.

--------------------------------------------------------------------------------
drkns 29.06.2021 04:04:29 +0100 - build 5839

1. Correction of 5838.

--------------------------------------------------------------------------------
drkns 29.06.2021 00:41:42 +0100 - build 5838

1. Eradicate idle events. Use ACTL_SYNCHRO if you need one.

2. Correction of panels autoupdate.

--------------------------------------------------------------------------------