@@ -38,6 +38,21 @@
 		</Expand>
 	</Type>
 
+	<Type Name="matrix_view&lt;*&gt;">
+		<Expand>
+			<CustomListItems>
+				<Variable Name="i" InitialValue="0"/>
+				<Loop>
+					<Item Name="row[{i}]">m_Data + i * m_Rows,[m_Cols]na</Item>
+					<Exec>++i</Exec>
+					<If Condition="i == m_Rows">
+						<Break/>
+					</If>
+				</Loop>
+			</CustomListItems>
+		</Expand>
+	</Type>
+
 	<Type Name="rectangle_t&lt;*&gt;">
 		<DisplayString>[{left} {top} {right} {bottom}]</DisplayString>
 		<Expand>
@@ -157,6 +172,7 @@
 				<DisplayString Condition="is_f_index(0xe)">yellow</DisplayString>
 				<DisplayString Condition="is_f_index(0xf)">white</DisplayString>
 				<Expand>
+					<Item Name="index">short(ForegroundColor &amp; 0xf),xb</Item>
 					<Item Name="alpha">short(ForegroundRGBA.a)</Item>
 				</Expand>
 			</Synthetic>
@@ -179,6 +195,7 @@
 				<DisplayString Condition="is_b_index(0xe)">yellow</DisplayString>
 				<DisplayString Condition="is_b_index(0xf)">white</DisplayString>
 				<Expand>
+					<Item Name="index">short(BackgroundColor &amp; 0xf),xb</Item>
 					<Item Name="alpha">short(BackgroundRGBA.a)</Item>
 				</Expand>
 			</Synthetic>
@@ -194,13 +211,14 @@
 					<Item Name="strikeout">bool(Flags &amp; FCF_FG_STRIKEOUT)</Item>
 					<Item Name="faint">bool(Flags &amp; FCF_FG_FAINT)</Item>
 					<Item Name="blink">bool(Flags &amp; FCF_FG_BLINK)</Item>
+					<Item Name="raw">short((Flags &amp; FCF_RAWATTR_MASK) &gt;&gt; 8),h</Item>
 				</Expand>
 			</Synthetic>
 		</Expand>
 	</Type>
 
 	<Type Name="FAR_CHAR_INFO">
-		<DisplayString>{Char}</DisplayString>
+		<DisplayString>{&amp;Char,[1]sub}</DisplayString>
 	</Type>
 
 	<Type Name="std::chrono::duration&lt;*, std::ratio&lt;*,*&gt;&gt;">
